# wadtools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu-ci.yml  windows-ci.yml
src/: CMakeLists.txt
src/common/: CMakeLists.txt  list.c  list.h  wad.c  wad.h
src/console/: CMakeLists.txt  wdtls.c
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  wdtls_gui.cpp
src/gui/forms/: MainWindow.ui
